<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corners">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/default_blue">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="#FFF"
            android:layout_centerInParent="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <TextView
            android:id="@+id/terms_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/terms"
            android:textColor="@color/pink" />
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/light_purple"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/dialog_ok_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_the_terms_and_conditions"
                android:textColor="#FFF"
                android:layout_margin="10dp"
                android:layout_centerInParent="true"
                android:textSize="16sp"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>