<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/default_blue">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_request"
            android:textColor="#FFF"
            android:layout_centerInParent="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/everything"
            android:textColor="@color/colorPrimary"
            android:id="@+id/switch1"
            android:theme="@style/Color1SwitchStyle"
            android:layout_centerInParent="true"
            android:checked="false" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/my_result"
            android:textColor="@color/colorPrimary"
            android:id="@+id/switch2"
            android:theme="@style/Color1SwitchStyle"
            android:layout_centerInParent="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/my_course_engagement"
            android:textColor="@color/colorPrimary"
            android:theme="@style/Color1SwitchStyle"
            android:id="@+id/switch3"
            android:layout_centerInParent="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_log"
            android:theme="@style/Color1SwitchStyle"
            android:textColor="@color/colorPrimary"
            android:id="@+id/switch4"
            android:layout_centerInParent="true" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/light_grey"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/log_activity_footbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            card_view:cardBackgroundColor="#C1A1F6"
            card_view:cardElevation="2dp"
            card_view:cardCornerRadius="2dp">
            <TextView
                android:id="@+id/text"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textColor="#FFF"
                android:text="@string/send"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>