<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="60dp">
    <ImageView
        android:id="@+id/portrait"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_toEndOf="@+id/portrait"
        android:layout_toStartOf="@+id/layout_btns"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:textColor="@color/light_purple"/>
    <RelativeLayout
        android:id="@+id/layout_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7.5dp">
        <RelativeLayout
            android:id="@+id/sendrequest"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:visibility="gone"
            android:background="@drawable/round_corner_blue_fill">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                android:textColor="#FFF"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/pendingrequest"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:visibility="gone"
            android:background="@drawable/round_corner_blue_hallow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending_request"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/receivingrequest"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:background="@drawable/round_corner_blue_hallow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received_request"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/friends"
            android:layout_width="130dp"
            android:layout_height="27dp"
            android:background="@drawable/round_corner_blue_hallow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#edeeee"-->
        <!--android:layout_alignParentBottom="true"/>-->

    </RelativeLayout>
</RelativeLayout>