<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_social"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.studygoal.jisc.SocialActivity">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tmp_login_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_with_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColorHint="@color/text_hint_color"
                android:textColor="@color/dark_grey"
                android:hint="@string/login_with_facebook" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColorHint="@color/text_hint_color"
                android:textColor="@color/dark_grey"
                android:hint="@string/login_with_google" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColorHint="@color/text_hint_color"
                android:textColor="@color/dark_grey"
                android:hint="@string/login_with_twitter" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
