<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">
    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tmp_login_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:orientation="vertical">
            <TextView
                android:id="@+id/forgot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password"
                android:layout_marginBottom="20dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/forgot_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_is_often_forgotten"
                android:textColor="#FFF"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>
            <RelativeLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/round_corners"
                android:layout_margin="15dp">
                <ImageView
                    android:id="@+id/forgot_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/login_email_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>
                <EditText
                    android:id="@+id/forgot_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="15sp"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_hint_color"
                    android:singleLine="true"
                    android:hint="@string/enter_your_email_address"
                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/forgot_icon"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/forgot_btn"
                android:layout_width="125dp"
                android:layout_height="37dp"
                android:background="@drawable/round_corner_loginbtn"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/forgot_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"
                    android:text="@string/send_request"
                    android:textColor="#FFF"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>