<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="60dp">
    <ImageView
        android:id="@+id/portrait"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="7.5dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_toEndOf="@+id/portrait"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/hide"
        android:layout_marginStart="2.5dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="5dp"
            android:textColor="@color/light_purple"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/hide"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_toStartOf="@+id/delete"
        android:layout_marginEnd="5dp"
        android:background="@drawable/round_corner_blue_hallow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/unhide"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_toStartOf="@+id/delete"
        android:layout_marginEnd="5dp"
        android:background="@drawable/round_corner_blue_hallow">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unhide"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/delete"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7.5dp"
        android:background="@drawable/round_corner_blue_fill">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="#FFF"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#edeeee"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>